@@ -406,7 +406,7 @@ host.
 \fB-cwd \fRjob_working_directory
 
 .IP
-Sepecifies the current working directory for job execution. If the
+Specifies the current working directory for job execution. If the
 option is not specified, OpenLava will use the current working directory
 where bsub is run for job execution. If the specified current working
 directory cannot be accessed by the user on the job execution host,
