@@ -560,6 +560,9 @@ Configuration to enable resource based job preemption. Only resources defined in
 the resource name list (names separated by spaces)
 can trigger the job preemption.
 .PP
+If this parameter is not configured, the preemption is based on job slots.
+Enabling the resource based job preemption disables the slot based preemption.
+.PP
 When a job in a high priority queue is pending because its required resource
 is unavailable, and the resource is defined in PREEMPTABLE_RESOURCES,
 OpenLava will preempt low priority jobs that are using the resource, until
@@ -574,7 +577,22 @@ required resource is not available, the resource is used by low priority jobs,
 and there are free job slots. If there are no free job slots, resource based
 preemption is not triggered.
 .SS Default
-Undefined. Resource based preemption is disabled.
+Undefined. Resource based preemption is disabled. Preemption is based on job
+slots.
+.SH PREEMPT_SLOT_SUSPEND
+.BR
+.SS Syntax
+.BR
+\fBPREEMPT_SLOT_SUSPEND =\fR y | n
+.SS Description
+.BR
+Specifies the behavior of the slot based preemption. 
+If \fBPREEMPT_SLOT_SUSPEND\fR is set to "y", the job preemption 
+suspends the preempted job. If it is set to "n",
+the job preemption kills then requeues the preempted job.
+.SS Default
+.BR
+n
 .SH SBD_SLEEP_TIME
 .BR
 .SS Syntax
