@@ -27,7 +27,7 @@ optional.
 .PP
 .PP
 Defines limits for the maximum amount of the specified resources that
-must be available for jobs to start, and which resource consumers the limits apply to.
+jobs are able to consume, and which resource consumers the limits apply to.
 Limits are enforced during job resource allocation.
 .PP
 Consumer type:
